# Data-Engineering-Zoomcamp-Project

./: .bruin.yml.example  .gitignore  Makefile  README.md
.github/workflows/: bruin-validate.yml
assets/: architecture_diagram.py
citibike-pipeline/: pipeline.yml
citibike-pipeline/assets/ingestion/: raw.sql  requirements.txt  storage.py
citibike-pipeline/assets/reports/: hourly_usage_metrics.sql  monthly_citibike_metrics.sql  weekly_citibike_trend.sql
citibike-pipeline/assets/staging/: staging.sql
citibike_pipeline/pipeline/: pipeline.yml
citibike_pipeline/pipeline/assets/ingestion/: raw.py  requirements.txt  storage.py
dashboard/: app.py  data.py  pyproject.toml
dashboard/pages/: hourly.py  monthly.py  weekly.py  yoy.py
terraform/: main.tf  variables.tf
